# valr-client

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_rest_interactive.py  test_rest_simple.py  test_utils.py
valrpy/: client.py  constants.py  enums.py  messages.py  responses.py  rest_connector.py  utils.py  websocket_connector.py
valrpy/messages/: __init__.py  core.py  rest.py  websocket.py
