[tool.poetry]
name = "valr-client"
version = "0.1.0"
description = ""
authors = ["mattjohnrock <johnstone.mattjames@gmail.com>"]
readme = "README.md"
packages = [{include = "valr_client"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
