[tool.poetry]
name = "valr-client"
version = "0.1.0"
description = ""
authors = ["mattjohnrock <johnstone.mattjames@gmail.com>"]
readme = "README.md"
packages = [{include = "valr_client"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
websockets = "^11.0"
websocket-client = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
